# gnome-control-center

./: Makefile.am  configure.ac  configure.in
capplets/: Makefile.am
capplets/about-me/: Makefile.am  gnome-about-me-dialog-moblin.ui  gnome-about-me-moblin.glade  gnome-about-me-password.c  gnome-about-me.c  gnome-about-me.desktop.in.in
capplets/accessibility/at-properties/: Makefile.am  at-properties.desktop.in.in
capplets/appearance/: Makefile.am  appearance-desktop.c  appearance-main.c  cc-appearance-panel.c  cc-background-page.c  gnome-wp-item.c  gnome-wp-item.h  gnome-wp-xml.c
capplets/appearance/data/: Makefile.am  appearance-moblin.glade  appearance-moblin.ui  appearance.ui  gnome-appearance-properties.desktop.in.in
capplets/common/: Makefile.am  activate-settings-daemon.c  capplet-stock-icons.c  capplet-stock-icons.h  capplet-util.c  capplet-util.h  cc-shell.c  cc-shell.h  file-transfer-dialog.c  gconf-property-editor.c  gconf-property-editor.h  gnome-theme-info.c  theme-thumbnail.c
capplets/date/: Makefile.am  cc-date-panel.c  cc-date-panel.h  lib.c
capplets/default-applications/: default-applications.desktop.in.in  gnome-da-capplet.c
capplets/display/: Makefile.am  cc-display-minimal-page.c  display-capplet-moblin.glade  display-capplet-moblin.ui  display-minimal.ui  display-properties.desktop.in.in  xrandr-capplet.c
capplets/email/: Makefile.am  cc-email-panel.c  cc-email-panel.h  lib.c
capplets/keybindings/: keybinding.desktop.in.in
capplets/keyboard/: Makefile.am  cc-keyboard-panel.c  cc-keyboard-panel.h  cc-layout-page.c  cc-layout-page.h  gnome-keyboard-properties-a11y-notifications-moblin.ui  gnome-keyboard-properties-a11y.c  gnome-keyboard-properties-dialog-moblin.ui  gnome-keyboard-properties-dialog.ui  gnome-keyboard-properties-moblin.glade  gnome-keyboard-properties-xkb.c  gnome-keyboard-properties-xkbltadd.c  gnome-keyboard-properties-xkbmc.c  gnome-keyboard-properties-xkbot.c  gnome-keyboard-properties.c  keyboard.desktop.in.in
capplets/language/: Makefile.am  cc-language-panel.c  cc-language-panel.h  lib.c
capplets/mouse/: Makefile.am  gnome-mouse-properties-moblin.glade  gnome-mouse-properties-moblin.ui  gnome-mouse-properties.c  gnome-mouse-properties.ui  gnome-settings-mouse.desktop.in.in
capplets/network/: Makefile.am  cc-network-panel.c  gnome-network-properties.c  gnome-network-properties.desktop.in.in  gnome-network-properties.ui
capplets/network-setup/: Makefile.am  cc-network-setup-panel.c  cc-network-setup-panel.h  lib.c
capplets/power/: cc-power-panel.c  power-properties.desktop.in.in  power.ui
capplets/printing/: Makefile.am  cc-printing-panel.c  cc-printing-panel.h  lib.c
capplets/security/: Makefile.am  cc-security-panel.c  cc-security-panel.h  run-passwd.c  run-passwd.h  security-module.c  security.c  security.desktop.in.in  security.ui
capplets/windows/: window-properties.desktop.in.in
libgnome-control-center-extension/: cc-shell.c
panels/: Makefile.am
panels/power/: Makefile.am  cc-power-panel.c  cc-power-panel.h  power-properties.desktop.in.in
panels/security/: Makefile.am  cc-security-panel.c  security.desktop.in.in
po/: POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  (+54 more)
shell/: Makefile.am  cc-shell-category-view.c  control-center.c  control-center.h  gnome-control-center.c  gnome-control-center.desktop.in.in  shell.ui
typing-break/: Makefile.am
