SUBDIRS = \
	common			\
	accessibility	\
	appearance		\
	default-applications	\
	display			\
	keybindings		\
	keyboard		\
	mouse			\
	network			\
	windows			\
	date

DIST_SUBDIRS = \
	common			\
	accessibility		\
	appearance		\
	default-applications	\
	keybindings		\
	keyboard		\
	mouse			\
	network			\
	windows			\
	display 		\
	date			\
	about-me


if BUILD_ABOUTME
SUBDIRS += about-me
endif

-include $(top_srcdir)/git.mk
